Revision history for perl distribution Convos

0.99_12 Not Released
 - Less icons in header
 - Fix <convos-input/> from overlapping main area
 - Improved scrolling to bottom logic #269

0.99_11 2016-09-19T23:05:31+0200
 - Fix "whois" for participant who is not in any channels
 - Fix removing IRC colors #281
 - Add more information to <convos-message-whois/>
 - Add first optional plugin "ShareDialog" #280

0.99_10 2016-09-14T23:35:31+0200
 - Fix handling of "/whois nick" when "nick" is offline
 - Fix tracking join/part/quit/nick change events #276
 - Fix handling IRC server replies with strange casing #277
 - Will not truncate files when disk is full
 - Normalizing email address for user
 - Add translation for :), :( and <3 into emojis
 - Can select TLS on connect

0.99_09 2016-09-11T22:53:31+0200
 - Fix sorting participants list
 - Add support for /ns (/msg nickserv)
 - Add support for /cs (/msg chanserv)
 - Add clickable emails #265
 - Add support for markdown formatting for <code/>
 - Add support for rendering emojis #186
 - Add support for autocomplete emoji in <convos-input/> #186
 - Add support for custom color themes #161
 - Change dialog settings less confusing
   * Render dialog title with markdown formatting and links
   * Getting participants list is more consistent after reconnect
   * Changed rendering of "close" button into a list item
 - Change autocomplete method for <convos-input/>

0.99_08 2016-09-01T22:35:25+0200
 - Fix emitting topic changes to frontend
 - Add dialog settings sidebar with topic and participants list
 - Add support for "/query nick"
 - Remove settings dropdown menu
 - Replaced Roboto with system fonts

0.99_07 2016-08-30T10:51:25+0200
 - Fix showing join/part messages in the correct channel
 - Fix running Convos on Windows mobile #271
 - Add favicon and app icons for iOS
 - Add basic support for "/mode ..."
 - Add support for "/kick ..."
 - Change "convos version" to also display running Convos version